# TAS-Racer

./: .gitignore  README.md  requirements.txt
install/: local_setup.sh  setup.sh
junk/custom_interfaces/: CMakeLists.txt  package.xml
junk/extract_costmap/: package.xml
junk/minimum_curvature_planner/: CMakeLists.txt  minimum_curvature_planner_plugin.xml
junk/online_planner_v2/: CMakeLists.txt  package.xml
junk/path_finder/: package.xml  setup.cfg
log/: latest_build  latest_list
notebooks/: README.md  new_preprocessing.ipynb  old_preprocessing.ipynb
notebooks/models/: map.py  point.py  pose.py  quaternion.py
notebooks/utils/: classify_points.py  extract_track_borders.py  trajectory_from_points.py
scripts/: generate_np_map.ipynb
scripts/c++_planner/: CMakeLists.txt
scripts/c++_planner/src/: main.cpp  occupancy_grid.npy
scripts/map2world/: map_to_world.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/dynamic_path_finder/: package.xml  setup.cfg  setup.py
src/extract_costmap/: setup.cfg  setup.py
src/global_helpers/: README.md  READNME.md  avoid_colision.ipynb  costman_aligning.ipynb
src/global_racetrajectory_optimization/: Readme.md  a_star_shortest_distance_path.py  adaptive_replanning.py  extract_centerline.py  generate_gazebo_world.py  main_globaltraj.py  requirements.txt  simulate_external_trajectory.py  visualize_trajectory.py  wall_generate_helper.py
src/localization/: README.md  package.xml  setup.py
src/minimum_curvature_planner/: package.xml
src/offline_planner/: CMakeLists.txt  README.md  offline_planner_plugin.xml  package.xml
src/online_planner/: CMakeLists.txt  README.md  online_planner_plugin.xml  package.xml
src/online_planner/include/online_planner/: Online_Planner.hpp  a_star.hpp  a_star_efficient.hpp  a_str_node.hpp  distance_transform.h  fsa.h  grid.hpp  online_planner.hpp  point.hpp  pose.hpp  quaternion.hpp  route_planner.hpp  utils.hpp
src/online_planner/src/: Online_Planner.cpp  a_star.cpp  distance_transform.cpp  online_planner.cpp  route_planner.cpp
src/path_finder/: setup.py
src/play_simulation/: README.md  gps.py  play_simulation.py  tf_translations.py
to_be_saved/: occupancy_grid.npy  occupancy_grid_info.yaml  trajectory.txt
(+222 files in other folders)
